// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HotelCard /> renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#EFEFEF",
        "borderBottomLeftRadius": 70,
        "borderBottomRightRadius": 70,
        "height": 494,
        "marginBottom": 71,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 71,
        "width": 600,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "test",
      }
    }
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 36,
          "paddingTop": 36,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 24,
            "lineHeight": 36,
          },
          Object {
            "color": "#585858",
          },
        ]
      }
    >
      Lorem Ipsum
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_400Regular",
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#6A0DFB",
            "marginVertical": 12,
          },
        ]
      }
    >
      6 diárias
       
      

      Quarto
      

      Passagem Aérea
      

    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 24,
            "lineHeight": 36,
          },
          Object {
            "color": "#585858",
          },
        ]
      }
    >
      R$ 2.999,00
    </Text>
  </View>
</View>
`;

exports[`<TeamCard /> renders correctly 1`] = `
<View>
  <Image
    source={1}
    style={
      Object {
        "height": 354,
        "marginLeft": 14,
        "marginRight": 14,
        "width": 312,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 24,
          "lineHeight": 36,
        },
        Object {
          "color": "#6A0DFB",
          "textAlign": "center",
        },
      ]
    }
  >
    Lorem Ipsum
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Inter_400Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "color": "#585858",
          "textAlign": "center",
        },
      ]
    }
  >
    Lorem Ipsum
  </Text>
</View>
`;
